--- a/mypro2/pro/folk.html
+++ b/mypro2/pro/folk.html
@@ -8,7 +8,7 @@
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/comm.css">
-    <link rel="stylesheet" href="css/tradition.css">
+    <link rel="stylesheet" href="css/folk.css">
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -23,10 +23,10 @@
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="./old.html" class="b-a nav-link">旧物改造</a>
             </li>
-            <li class=" nav-item active p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">传统手艺</a>
+            <li class=" nav-item  p-1 pl-3 pr-3">
+                <a href="./tradition.html" class="b-a nav-link">传统手艺</a>
             </li>
-            <li class=" nav-item p-1 pl-3 pr-3">
+            <li class=" nav-item active p-1 pl-3 pr-3">
                 <a href="" class="b-a nav-link">民间艺术</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
@@ -49,62 +49,65 @@
                 <a href="" class="all nav-link p-0">▼全部</a>
             </li>
             <li class="nav-item ">
-                <a href="" class="livelink  nav-link p-0">布艺</a>
+                <a href="" class="livelink  nav-link p-0">剪纸</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">羊毛毡</a>
+                <a href="" class="livelink nav-link p-0">布艺</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">皮革</a>
+                <a href="" class="livelink nav-link p-0">刺绣</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">折纸</a>
+                <a href="" class="livelink nav-link p-0">绘画</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink  nav-link p-0">十字绣</a>
+                <a href="" class="livelink  nav-link p-0">拓印</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink  nav-link p-0">丝带绣</a>
+                <a href="" class="livelink  nav-link p-0">面艺</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">编织</a>
+                <a href="" class="livelink nav-link p-0">泥塑</a>
             </li>
             <li class=" nav-item ">
-                <a href="" class="livelink nav-link p-0">中国结</a>
+                <a href="" class="livelink nav-link p-0">脸谱</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">串珠</a>
+                <a href="" class="livelink nav-link p-0">皮影</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">裁剪</a>
+                <a href="" class="livelink nav-link p-0">风筝</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">丝网花</a>
+                <a href="" class="livelink nav-link p-0">雕镌</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">气球</a>
+                <a href="" class="livelink nav-link p-0">藤编</a>
             </li>
             <li class=" nav-item ">
-                <a href="" class="livelink nav-link p-0">橡皮章</a>
+                <a href="" class="livelink nav-link p-0">染布</a>
+            </li>
+            <li class=" nav-item ">
+                <a href="" class="livelink nav-link p-0">其它</a>
             </li>
             <li class=" nav-item mr-5">
-                <a href="" class="livelink nav-link p-0">木工</a>
+                <a href="" class="livelink nav-link p-0">沙画</a>
             </li>
         </ul>
     </div>
     <div class="topdy clearfix">
-        <img src="../image/tradition/top.jpg" alt="" class="float-left"/>
-        <h1 class="">传统手工
-            <span class="rspan">传统手工</span>
+        <img src="../image/folk/top.jpg-350" alt="" class="float-left"/>
+        <h1 class="">民间艺术
+            <span class="rspan">民间工艺</span>
         </h1>
-        <span>提供为你提供剪纸、折纸、刺绣、十字绣、中国结、串珠、丝网花、草编、木雕、等最新最实用的diy手工艺品制作方法大全、手工制作工艺品教程,及各种传统手工艺创意作品展示,体验传统手工工艺品魅力就肉丁网学习吧！</span>
+        <span>肉丁网推广传统手工传承中华文化，提供陕西民间艺术等各地艺术艺人介绍,及民间剪纸艺术、民间木雕、艺术喜字等中国民间艺术技术和欣赏，欢迎广大民间艺术爱好者分享更多原创作品，让中国文化遗产发扬光大！</span>
     </div>
     <div class="content">
         <div class="row m-0 mt-3">
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oo w-100 mr-1" style="background:url(../image/tradition/t1.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oo w-100 mr-1" style="background:url(../image/folk/f1.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
@@ -115,7 +118,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="ot w-100 mr-1 " style="background:url(../image/tradition/t2.png) no-repeat left top;background-size:100%;">
+                        <div class="ot w-100 mr-1 " style="background:url(../image/folk/f2.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
@@ -126,22 +129,20 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oth w-100 mr-1" style="background:url(../image/tradition/t3.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oth w-100 mr-1" style="background:url(../image/folk/f3.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
-                        <div class="t1_2 ">
-                            <span><img src="../image/j.png" alt=""/>生态板DIY简单实用的桌柜做法教程</div>
+                        <div class="t1_2 ">生态板DIY简单实用的桌柜做法教程</div>
                     </a>
                 </div>
             </div>
             <div class="col-3 p-0">
                 <div class=" t1">
                     <a href="">
-                        <div class="of w-100 mr-1" style="background:url(../image/tradition/t4.jpg) no-repeat left top;background-size:100%;">
+                        <div class="of w-100 mr-1" style="background:url(../image/folk/f4.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
-                        <div class="t1_2 ">
-                            <span><img src="../image/j.png" alt=""/>手工布艺自制发饰制作方法图解教程</div>
+                        <div class="t1_2 ">手工布艺自制发饰制作方法图解教程</div>
                     </a>
                 </div>
             </div>
@@ -150,7 +151,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oo w-100 mr-1" style="background:url(../image/tradition/t5.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oo w-100 mr-1" style="background:url(../image/folk/f5.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
@@ -161,7 +162,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="ot w-100 mr-1 " style="background:url(../image/tradition/t6.png) no-repeat left top;background-size:100%;">
+                        <div class="ot w-100 mr-1 " style="background:url(../image/folk/f6.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
@@ -172,22 +173,20 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oth w-100 mr-1" style="background:url(../image/tradition/t7.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oth w-100 mr-1" style="background:url(../image/folk/f7.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
-                        <div class="t1_2 ">
-                            <span><img src="../image/j.png" alt=""/>手工艺术品制作 用书钉做玫瑰方法</div>
+                        <div class="t1_2 ">手工艺术品制作 用书钉做玫瑰方法</div>
                     </a>
                 </div>
             </div>
             <div class="col-3 p-0">
                 <div class=" t1">
                     <a href="">
-                        <div class="of w-100 mr-1" style="background:url(../image/tradition/t8.jpg) no-repeat left top;background-size:100%;">
+                        <div class="of w-100 mr-1" style="background:url(../image/folk/f8.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
-                        <div class="t1_2 ">
-                            <span><img src="../image/j.png" alt=""/>手工布艺小森式手工烫花棉麻耳环</div>
+                        <div class="t1_2 ">手工布艺小森式手工烫花棉麻耳环</div>
                     </a>
                 </div>
             </div>
