--- a/mypro2/pro/live.html
+++ b/mypro2/pro/live.html
@@ -15,19 +15,19 @@
     <div class="t-nav navbar navbar-expand p-0 mt-1">
         <ul class="navbar-nav">
             <li class="nav-item p-1 pl-4 pr-4 ">
-                <a href="" class="b-a nav-link ">首页</a>
+                <a href="./index.html" class="b-a nav-link pl-3 pr-3">首页</a>
             </li>
             <li class="nav-item active p-1 pl-3 pr-3 ">
                 <a href="" class="b-a nav-link ">生活DIY</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">旧物改造</a>
+                <a href="./old.html" class="b-a nav-link">旧物改造</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">传统手艺</a>
+                <a href="./tradition.html" class="b-a nav-link">传统手艺</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">民间艺术</a>
+                <a href="./folk.html" class="b-a nav-link">民间艺术</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="" class="b-a nav-link">塑雕陶艺</a>
@@ -96,10 +96,10 @@
                 <div class="mr-1 t1">
                     <a href="">
                         <div class="oo w-100 mr-1" style="background:url(../image/live/l1.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
-                            <span><img src="../image/live/j.png" alt=""/></span>牙签和毛线手工编织精美首饰盒做法图解教程</div>
+                            <span><img src="../image/j.png" alt=""/></span>牙签和毛线手工编织精美首饰盒做法图解教程</div>
                     </a>
                 </div>
             </div>
@@ -107,10 +107,10 @@
                 <div class="mr-1 t1">
                     <a href="">
                         <div class="ot w-100 mr-1 " style="background:url(../image/live/l2.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
-                            <span><img src="../image/live/j.png" alt=""/></span>用纸盒和毛球DIY漂亮的小海龟笔筒做法图解教程</div>
+                            <span><img src="../image/j.png" alt=""/></span>用纸盒和毛球DIY漂亮的小海龟笔筒做法图解教程</div>
                     </a>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                 <div class="mr-1 t1">
                     <a href="">
                         <div class="oth w-100 mr-1" style="background:url(../image/live/l3.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">生态板DIY简单实用的桌柜做法教程</div>
                     </a>
@@ -128,7 +128,7 @@
                 <div class=" t1">
                     <a href="">
                         <div class="of w-100 mr-1" style="background:url(../image/live/l4.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">手工布艺自制发饰制作方法图解教程</div>
                     </a>
@@ -140,10 +140,10 @@
                 <div class="mr-1 t1">
                     <a href="">
                         <div class="oo w-100 mr-1" style="background:url(../image/live/l5.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
-                            <span><img src="../image/live/j.png" alt=""/></span>铁丝和珍珠制作时尚公主风绕线手镯教程</div>
+                            <span><img src="../image/j.png" alt=""/></span>铁丝和珍珠制作时尚公主风绕线手镯教程</div>
                     </a>
                 </div>
             </div>
@@ -151,10 +151,10 @@
                 <div class="mr-1 t1">
                     <a href="">
                         <div class="ot w-100 mr-1 " style="background:url(../image/live/l6.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
-                            <span><img src="../image/live/j.png" alt=""/></span>美哒哒的公主风树枝花环的做法</div>
+                            <span><img src="../image/j.png" alt=""/></span>美哒哒的公主风树枝花环的做法</div>
                     </a>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                 <div class="mr-1 t1">
                     <a href="">
                         <div class="oth w-100 mr-1" style="background:url(../image/live/l7.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">手工艺术品制作 用书钉做玫瑰方法</div>
                     </a>
@@ -172,7 +172,7 @@
                 <div class=" t1">
                     <a href="">
                         <div class="of w-100 mr-1" style="background:url(../image/live/l8.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/l8.jpg" alt=""/>
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">手工布艺小森式手工烫花棉麻耳环</div>
                     </a>
