--- a/mypro2/pro/tradition.html
+++ b/mypro2/pro/tradition.html
@@ -8,26 +8,26 @@
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/comm.css">
-    <link rel="stylesheet" href="css/live.css">
+    <link rel="stylesheet" href="css/tradition.css">
 </head>
 <body>
 <div class="container-fluid p-0">
     <div class="t-nav navbar navbar-expand p-0 mt-1">
         <ul class="navbar-nav">
             <li class="nav-item p-1 pl-4 pr-4 ">
-                <a href="./index.html" class="b-a nav-link ">首页</a>
+                <a href="./index.html" class="b-a nav-link pl-3 pr-3">首页</a>
             </li>
-            <li class="nav-item active p-1 pl-3 pr-3 ">
-                <a href="" class="b-a nav-link ">生活DIY</a>
+            <li class="nav-item  p-1 pl-3 pr-3 ">
+                <a href="./live.html" class="b-a nav-link ">生活DIY</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="./old.html" class="b-a nav-link">旧物改造</a>
             </li>
-            <li class=" nav-item p-1 pl-3 pr-3">
+            <li class=" nav-item active p-1 pl-3 pr-3">
                 <a href="" class="b-a nav-link">传统手艺</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">民间艺术</a>
+                <a href="./folk.html" class="b-a nav-link">民间艺术</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="" class="b-a nav-link">塑雕陶艺</a>
@@ -49,53 +49,62 @@
                 <a href="" class="all nav-link p-0">▼全部</a>
             </li>
             <li class="nav-item ">
-                <a href="" class="livelink  nav-link p-0">生活</a>
+                <a href="" class="livelink  nav-link p-0">布艺</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">摄影</a>
+                <a href="" class="livelink nav-link p-0">羊毛毡</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">家居</a>
+                <a href="" class="livelink nav-link p-0">皮革</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">饰品</a>
+                <a href="" class="livelink nav-link p-0">折纸</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink  nav-link p-0">玩具</a>
+                <a href="" class="livelink  nav-link p-0">十字绣</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink  nav-link p-0">电子</a>
+                <a href="" class="livelink  nav-link p-0">丝带绣</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">蜡烛</a>
+                <a href="" class="livelink nav-link p-0">编织</a>
             </li>
             <li class=" nav-item ">
-                <a href="" class="livelink nav-link p-0">手工皂</a>
+                <a href="" class="livelink nav-link p-0">中国结</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">测试</a>
+                <a href="" class="livelink nav-link p-0">串珠</a>
             </li>
             <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">欣赏</a>
+                <a href="" class="livelink nav-link p-0">裁剪</a>
+            </li>
+            <li class=" nav-item">
+                <a href="" class="livelink nav-link p-0">丝网花</a>
+            </li>
+            <li class=" nav-item">
+                <a href="" class="livelink nav-link p-0">气球</a>
+            </li>
+            <li class=" nav-item ">
+                <a href="" class="livelink nav-link p-0">橡皮章</a>
             </li>
             <li class=" nav-item mr-5">
-                <a href="" class="livelink nav-link p-0">发型制作</a>
+                <a href="" class="livelink nav-link p-0">木工</a>
             </li>
         </ul>
     </div>
     <div class="topdy clearfix">
-        <img src="../image/live/top.jpg-350" alt="" class="float-left"/>
-        <h1 class="">生活DIY
-            <span class="rspan">生活DIY</span>
+        <img src="../image/tradition/top.jpg" alt="" class="float-left"/>
+        <h1 class="">传统手工
+            <span class="rspan">传统手工</span>
         </h1>
-        <span>肉丁网《生活DIY》栏目提供各种生活中的小创意。丰富的DIY手工制作教程和创意家居、创意生活图片案例让你在家中轻松制作各种玩具、饰品和生活用品。来肉丁网学习手工制作,让你的生活更加丰富多彩！</span>
+        <span>提供为你提供剪纸、折纸、刺绣、十字绣、中国结、串珠、丝网花、草编、木雕、等最新最实用的diy手工艺品制作方法大全、手工制作工艺品教程,及各种传统手工艺创意作品展示,体验传统手工工艺品魅力就肉丁网学习吧！</span>
     </div>
     <div class="content">
         <div class="row m-0 mt-3">
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oo w-100 mr-1" style="background:url(../image/live/l1.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oo w-100 mr-1" style="background:url(../image/tradition/t1.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
@@ -106,7 +115,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="ot w-100 mr-1 " style="background:url(../image/live/l2.jpg) no-repeat left top;background-size:100%;">
+                        <div class="ot w-100 mr-1 " style="background:url(../image/tradition/t2.png) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
@@ -117,20 +126,22 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oth w-100 mr-1" style="background:url(../image/live/l3.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oth w-100 mr-1" style="background:url(../image/tradition/t3.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
-                        <div class="t1_2 ">生态板DIY简单实用的桌柜做法教程</div>
+                        <div class="t1_2 ">
+                            <span><img src="../image/j.png" alt=""/>生态板DIY简单实用的桌柜做法教程</div>
                     </a>
                 </div>
             </div>
             <div class="col-3 p-0">
                 <div class=" t1">
                     <a href="">
-                        <div class="of w-100 mr-1" style="background:url(../image/live/l4.jpg) no-repeat left top;background-size:100%;">
+                        <div class="of w-100 mr-1" style="background:url(../image/tradition/t4.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
-                        <div class="t1_2 ">手工布艺自制发饰制作方法图解教程</div>
+                        <div class="t1_2 ">
+                            <span><img src="../image/j.png" alt=""/>手工布艺自制发饰制作方法图解教程</div>
                     </a>
                 </div>
             </div>
@@ -139,7 +150,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oo w-100 mr-1" style="background:url(../image/live/l5.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oo w-100 mr-1" style="background:url(../image/tradition/t5.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
@@ -150,7 +161,7 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="ot w-100 mr-1 " style="background:url(../image/live/l6.jpg) no-repeat left top;background-size:100%;">
+                        <div class="ot w-100 mr-1 " style="background:url(../image/tradition/t6.png) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
@@ -161,20 +172,22 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oth w-100 mr-1" style="background:url(../image/live/l7.jpg) no-repeat left top;background-size:100%;">
+                        <div class="oth w-100 mr-1" style="background:url(../image/tradition/t7.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
-                        <div class="t1_2 ">手工艺术品制作 用书钉做玫瑰方法</div>
+                        <div class="t1_2 ">
+                            <span><img src="../image/j.png" alt=""/>手工艺术品制作 用书钉做玫瑰方法</div>
                     </a>
                 </div>
             </div>
             <div class="col-3 p-0">
                 <div class=" t1">
                     <a href="">
-                        <div class="of w-100 mr-1" style="background:url(../image/live/l8.jpg) no-repeat left top;background-size:100%;">
+                        <div class="of w-100 mr-1" style="background:url(../image/tradition/t8.jpg) no-repeat left top;background-size:100%;">
                             <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
-                        <div class="t1_2 ">手工布艺小森式手工烫花棉麻耳环</div>
+                        <div class="t1_2 ">
+                            <span><img src="../image/j.png" alt=""/>手工布艺小森式手工烫花棉麻耳环</div>
                     </a>
                 </div>
             </div>
