--- a/mypro2/pro/old.html
+++ b/mypro2/pro/old.html
@@ -8,26 +8,26 @@
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/comm.css">
-    <link rel="stylesheet" href="css/live.css">
+    <link rel="stylesheet" href="css/old.css">
 </head>
 <body>
 <div class="container-fluid p-0">
     <div class="t-nav navbar navbar-expand p-0 mt-1">
         <ul class="navbar-nav">
             <li class="nav-item p-1 pl-4 pr-4 ">
-                <a href="" class="b-a nav-link ">首页</a>
+                <a href="./index.html" class="b-a nav-link pl-3 pr-3">首页</a>
             </li>
-            <li class="nav-item active p-1 pl-3 pr-3 ">
-                <a href="" class="b-a nav-link ">生活DIY</a>
+            <li class="nav-item  p-1 pl-3 pr-3 ">
+                <a href="./live.html" class="b-a nav-link ">生活DIY</a>
             </li>
-            <li class=" nav-item p-1 pl-3 pr-3">
+            <li class=" nav-item active p-1 pl-3 pr-3">
                 <a href="" class="b-a nav-link">旧物改造</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">传统手艺</a>
+                <a href="./tradition.html" class="b-a nav-link">传统手艺</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
-                <a href="" class="b-a nav-link">民间艺术</a>
+                <a href="./folk.html" class="b-a nav-link">民间艺术</a>
             </li>
             <li class=" nav-item p-1 pl-3 pr-3">
                 <a href="" class="b-a nav-link">塑雕陶艺</a>
@@ -43,82 +43,42 @@
             </li>
         </ul>
     </div>
-    <div class="livebar navbar navbar-expand p-0 mt-1">
-        <ul class="navbar-nav justify-content-between w-100">
-            <li class="nav-item">
-                <a href="" class="all nav-link p-0">▼全部</a>
-            </li>
-            <li class="nav-item ">
-                <a href="" class="livelink  nav-link p-0">生活</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">摄影</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">家居</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">饰品</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink  nav-link p-0">玩具</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink  nav-link p-0">电子</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">蜡烛</a>
-            </li>
-            <li class=" nav-item ">
-                <a href="" class="livelink nav-link p-0">手工皂</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">测试</a>
-            </li>
-            <li class=" nav-item">
-                <a href="" class="livelink nav-link p-0">欣赏</a>
-            </li>
-            <li class=" nav-item mr-5">
-                <a href="" class="livelink nav-link p-0">发型制作</a>
-            </li>
-        </ul>
-    </div>
     <div class="topdy clearfix">
-        <img src="../image/live/top.jpg-350" alt="" class="float-left"/>
-        <h1 class="">生活DIY
-            <span class="rspan">生活DIY</span>
+        <img src="../image/old/top.jpg-350" alt="" class="float-left"/>
+        <h1 class="">旧物改造
+            <span class="rspan">旧物改造</span>
         </h1>
-        <span>肉丁网《生活DIY》栏目提供各种生活中的小创意。丰富的DIY手工制作教程和创意家居、创意生活图片案例让你在家中轻松制作各种玩具、饰品和生活用品。来肉丁网学习手工制作,让你的生活更加丰富多彩！</span>
+        <span>牛奶盒、饮料瓶、废纸箱等被忽略的生活垃圾和旧物，在剪刀、胶水等工具的帮助下，就可以变成各种实用的日用品…当然，最重要的是加上你的奇思妙想和一双巧手，来肉丁网学习可以让你的生活变得更加丰富多彩，欢迎分享变废为宝手工小制作图片及各种实用的家有妙招废物利用的废旧物品手工制作DIY教程！</span>
     </div>
     <div class="content">
         <div class="row m-0 mt-3">
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oo w-100 mr-1" style="background:url(../image/live/l1.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        <div class="oo w-100 mr-1" style="background:url(../image/old/o1.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
-                            <span><img src="../image/live/j.png" alt=""/></span>牙签和毛线手工编织精美首饰盒做法图解教程</div>
+                            <span><img src="../image/j.png" alt=""/></span>牙签和毛线手工编织精美首饰盒做法图解教程</div>
                     </a>
                 </div>
             </div>
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="ot w-100 mr-1 " style="background:url(../image/live/l2.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        <div class="ot w-100 mr-1 " style="background:url(../image/old/o2.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
-                            <span><img src="../image/live/j.png" alt=""/></span>用纸盒和毛球DIY漂亮的小海龟笔筒做法图解教程</div>
+                            <span><img src="../image/j.png" alt=""/></span>用纸盒和毛球DIY漂亮的小海龟笔筒做法图解教程</div>
                     </a>
                 </div>
             </div>
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oth w-100 mr-1" style="background:url(../image/live/l3.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        <div class="oth w-100 mr-1" style="background:url(../image/old/o3.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">生态板DIY简单实用的桌柜做法教程</div>
                     </a>
@@ -127,10 +87,11 @@
             <div class="col-3 p-0">
                 <div class=" t1">
                     <a href="">
-                        <div class="of w-100 mr-1" style="background:url(../image/live/l4.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        <div class="of w-100 mr-1" style="background:url(../image/old/o4.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
-                        <div class="t1_2 ">手工布艺自制发饰制作方法图解教程</div>
+                        <div class="t1_2 ">
+                            <span><img src="../image/j.png" alt=""/>手工布艺自制发饰制作方法图解教程</div>
                     </a>
                 </div>
             </div>
@@ -139,30 +100,30 @@
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oo w-100 mr-1" style="background:url(../image/live/l5.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        <div class="oo w-100 mr-1" style="background:url(../image/old/o5.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 " >
-                            <span><img src="../image/live/j.png" alt=""/></span>铁丝和珍珠制作时尚公主风绕线手镯教程</div>
+                            <span><img src="../image/j.png" alt=""/></span>铁丝和珍珠制作时尚公主风绕线手镯教程</div>
                     </a>
                 </div>
             </div>
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="ot w-100 mr-1 " style="background:url(../image/live/l6.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        <div class="ot w-100 mr-1 " style="background:url(../image/old/o6.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">
-                            <span><img src="../image/live/j.png" alt=""/></span>美哒哒的公主风树枝花环的做法</div>
+                            <span><img src="../image/j.png" alt=""/></span>美哒哒的公主风树枝花环的做法</div>
                     </a>
                 </div>
             </div>
             <div class="col-3 p-0 pr-2">
                 <div class="mr-1 t1">
                     <a href="">
-                        <div class="oth w-100 mr-1" style="background:url(../image/live/l7.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/zw.gif" alt=""/>
+                        <div class="oth w-100 mr-1" style="background:url(../image/old/o7.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
                         <div class="t1_2 ">手工艺术品制作 用书钉做玫瑰方法</div>
                     </a>
@@ -171,10 +132,11 @@
             <div class="col-3 p-0">
                 <div class=" t1">
                     <a href="">
-                        <div class="of w-100 mr-1" style="background:url(../image/live/l8.jpg) no-repeat left top;background-size:100%;">
-                            <img class="lh" src="../image/live/l8.jpg" alt=""/>
+                        <div class="of w-100 mr-1" style="background:url(../image/old/o8.jpg) no-repeat left top;background-size:100%;">
+                            <img class="lh" src="../image/zw.gif" alt=""/>
                         </div>
-                        <div class="t1_2 ">手工布艺小森式手工烫花棉麻耳环</div>
+                        <div class="t1_2 ">
+                            <span><img src="../image/j.png" alt=""/>手工布艺小森式手工烫花棉麻耳环</div>
                     </a>
                 </div>
             </div>
